<resources>
    <string name="app_name">TestApp</string>
    <string name="get_current_position">Get current position</string>
    <string name="subscribe_to_position_updates">Subscribe to position updates</string>
    <string name="location_template_string">lat: %1$f \nlon:%2$f</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>

    <string name="subscribe_to_accelerometer_updates">Subscribe to accelero updates</string>
    <string name="unsubscribe_to_accelerometer_updates">Unsubscribe to accelero updates</string>

    <string name="subscribe_to_magnetic_updates">Subscribe to magnetic updates</string>
    <string name="unsubscribe_to_magnetic_updates">Unsubscribe to magnetic updates</string>

    <string name="subscribe_to_gyroscope_updates">Subscribe to gyroscope updates</string>
    <string name="unsubscribe_to_gyroscope_updates">Unsubscribe to gyroscope updates</string>

    <string name="location">Location</string>
    <string name="accelerometer_sensor">Accelerometer Sensor</string>
    <string name="magnetic_sensor">Magnetic Sensor</string>
    <string name="gyroscope_sensor">Gyroscope Sensor</string>
    <string name="first_sample">First Sample</string>
    <string name="second_sample">Second Sample</string>

    <string name="azimuth">Azimuth:</string>
    <string name="pitch">Pitch:</string>
    <string name="roll">Roll:</string>

    <string name="value_format">%1$.2f</string>

    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="navigation_test">Navigation test</string>

</resources>