<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="60dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_show_location"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:text="@string/location" />

    <Button
        android:id="@+id/btn_show_accelero_sensor"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:text="@string/accelerometer_sensor" />

    <Button
        android:id="@+id/btn_show_magnetic_sensor"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:text="@string/magnetic_sensor" />

    <Button
        android:id="@+id/btn_show_gyroscope_sensor"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:text="@string/gyroscope_sensor" />

    <Button
        android:id="@+id/btn_show_first_sample"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:text="@string/first_sample" />

    <Button
        android:id="@+id/btn_navigation"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:text="@string/navigation_test" />

</LinearLayout>